--- a/RabbitMQ_WorkerService/API/appsettings.Development.json
+++ b/RabbitMQ_WorkerService/API/appsettings.Development.json
@@ -4,5 +4,19 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+
+  "RabbitMQConnectionSettings": {
+    "HostName": "xxx.xxx.x.xxx",
+    "Username": "xxx",
+    "Password": "xxx",
+    "Port": 5672
+  },
+
+  "RabbitMQSettings": {
+    "xxxRoutingKey": ".*xxx",
+    "xxxExchange": "xxxTopic"
+  },
+
+  "AllowedHosts": "*"
 }
