--- a/RabbitMQ_WorkerService/API/appsettings.json
+++ b/RabbitMQ_WorkerService/API/appsettings.json
@@ -5,5 +5,18 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+
+  "RabbitMQConnectionSettings": {
+    "HostName": "xxx.xxx.x.xxx",
+    "Username": "xxx",
+    "Password": "xxx",
+    "Port": 5672
+  },
+
+  "RabbitMQSettings": {
+    "xxxRoutingKey": ".*xxx",
+    "xxxExchange": "xxxTopic"
+  },
+
   "AllowedHosts": "*"
 }
