--- a/RabbitMQ_WorkerService/Worker/appsettings.Development.json
+++ b/RabbitMQ_WorkerService/Worker/appsettings.Development.json
@@ -2,7 +2,20 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+
+  "RabbitMQConnectionSettings": {
+    "HostName": "xxx.xxx.x.xxx",
+    "Username": "xxx",
+    "Password": "xxx",
+    "Port": 5672
+  },
+
+  "RabbitMQSettings": {
+    "xxxQueue": "xxxx"
+  },
+
+  "AllowedHosts": "*"
 }
